# antra

./: .gitignore  LICENSE  README.md  conftest.py  example.py  pyproject.toml  setup.cfg  setup.py  teset.ipynb
antra/: __init__.py  abstractable.py  graph.py  graph_input.py  graph_node.py  intervention.py  location.py  realization.py  torch_utils.py  utils.py
antra/compgraphs/: MLP.py  bert.py
antra/counterfactual/: __init__.py  dataset.py
antra/interchange/: __init__.py  abstraction.py  abstraction_batched.py  abstraction_batched_new.py  abstraction_batched_old.py  abstraction_single_old.py  batched.py  counterfactual.py  mapping.py
compgraph/: abstractable.py  abstraction_batched.py  constructor.py  graph.py  graph_input.py  graph_node.py  intervention.py  torch_utils.py  utils.py
compgraph/abstraction/: batched.py  mapping.py  non_batched.py
compgraph/interchange/: abstraction.py  abstraction_batched.py
examples/: bert.ipynb  bert_utils.py  counterfactual_training.ipynb  example.py  simple.py
examples/data/: sentiment_data.tsv
intervention/: __init__.py  abstraction_utils.py  constructor.py  example.py  graph.py  graph_node.py  intervention.py  utils.py
tests/: test_abstractable.py  test_batch_intervention.py  test_constructor.py  test_create_possible_mappings.py  test_graph_input.py  test_intervention.py  test_location.py  test_simple_arithemtic.py  test_simple_arithmetic.py  test_tensor_arithmetic.py  test_utils.py  utils.py
tests/bert_compgraph/: dataset.py  test_bert.py  test_bert_compgraph.py
tests/counterfactual/: test_backprop.py
(+13 files in other folders)
