[metadata]
# replace with your username:
name = compgraph
version = 0.0.1
author = Hanson Lu
author_email = hansonlu.hl@gmail.com
description = Lightweight package for defining computation graphs and performing intervention experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hansonhl/compgraph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
